# ESP32-Drone

./: Drone.md  README.md
FlightControl/: .gitignore
FlightControl/components/arduino/: CMakeLists.txt
FlightControl/components/arduino/libraries/MBL_Quadcopter/: library.properties
FlightControl/components/arduino/libraries/MBL_Quadcopter/src/: MBL_Quadcopter.cpp  MBL_Quadcopter.h  motor.cpp  motor.h
FlightControl/components/arduino/libraries/ReefwingFilter/: LICENSE  README.md  keywords.txt  library.properties
FlightControl/components/arduino/libraries/ReefwingFilter/examples/simpleSMA/: simpleSMA.ino
FlightControl/components/arduino/libraries/ReefwingFilter/examples/smaVsEma/: smaVsEma.ino
FlightControl/components/arduino/libraries/ReefwingFilter/examples/unoTempSensor/: unoTempSensor.ino
FlightControl/components/arduino/libraries/ReefwingFilter/src/: ReefwingFilter.cpp  ReefwingFilter.h
FlightControl/components/bluepad32/: uni_ble.c
FlightControl/components/bluepad32_arduino/include/: ArduinoControllerProperties.h
FlightControl/main/: CMakeLists.txt  arduino_main.cpp  arduino_main_1.cpp  bluetooth_access.h  custom-partition.csv  data.h  wifi_access.h
PythonScripts/: MBL_QTC.py  recv.py  send.py
